# bevy_server_browser

./: Cargo.toml  LICENSE  README.md
examples/: client.rs  server.rs  server_and_client.rs
src/: lib.rs  server_metadata.rs
